@@ -1,3 +1,6 @@
+28 June 2018: Wouter
+	- num.queries.tls counter for queries over TLS.
+
 27 June 2018: Wouter
 	- #4109: Fix that package config depends on python unconditionally.
 	- Patch, do not export python from pkg-config, from Petr Menšík.
